--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Sicura Share</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
+    <string name="tab_text_1">Home</string>
+    <string name="tab_text_2">Encrypt/Decrypt</string>
+    <string name="tab_text_3">History</string>
 </resources>
